css/style.css
/* ... */
@font-face {
    font-family: 'Helvetica Medium';
    src: url('../fonts/HelveticaNeue-Medium.eot');
    src: url('../fonts/HelveticaNeue-Medium.eot?#iefix') format('embedded-opentype'),
        url('../fonts/HelveticaNeue-Medium.woff2') format('woff2'),
        url('../fonts/HelveticaNeue-Medium.woff') format('woff'),
        url('../fonts/HelveticaNeue-Medium.ttf') format('truetype'),
        url('../fonts/HelveticaNeue-Medium.svg#HelveticaNeue-Medium') format('svg');
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Helvetica Italic';
    src: url('../fonts/HelveticaNeue-Italic.eot');
    src: url('../fonts/HelveticaNeue-Italic.eot?#iefix') format('embedded-opentype'),
        url('../fonts/HelveticaNeue-Italic.woff2') format('woff2'),
        url('../fonts/HelveticaNeue-Italic.woff') format('woff'),
        url('../fonts/HelveticaNeue-Italic.ttf') format('truetype'),
        url('../fonts/HelveticaNeue-Italic.svg#HelveticaNeue-Italic') format('svg');
    font-weight: normal;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Helvetica Black';
    src: url('../fonts/HelveticaNeue-Black.eot');
    src: url('../fonts/HelveticaNeue-Black.eot?#iefix') format('embedded-opentype'),
        url('../fonts/HelveticaNeue-Black.woff2') format('woff2'),
        url('../fonts/HelveticaNeue-Black.woff') format('woff'),
        url('../fonts/HelveticaNeue-Black.ttf') format('truetype'),
        url('../fonts/HelveticaNeue-Black.svg#HelveticaNeue-Black') format('svg');
    font-weight: 900;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Helvetica Thin';
    src: url('../fonts/HelveticaNeue-Thin.eot');
    src: url('../fonts/HelveticaNeue-Thin.eot?#iefix') format('embedded-opentype'),
        url('../fonts/HelveticaNeue-Thin.woff2') format('woff2'),
        url('../fonts/HelveticaNeue-Thin.woff') format('woff'),
        url('../fonts/HelveticaNeue-Thin.ttf') format('truetype'),
        url('../fonts/HelveticaNeue-Thin.svg#HelveticaNeue-Thin') format('svg');
    font-weight: 100;
    font-style: normal;
    font-display: swap;
}

/* ------------------------------------------ */

/*--------- GLOBAL STYLING ----------*/

html {

    font-family: 'Helvetica Roman', Helvetica, Arial, sans-serif;
    font-size: 100%; /* Preventive setting for future use of EM / REM font-size */
    
}

h1, h2, h3, h4, h5, h6{
    padding:0;
    margin:0;
}

p {
    margin-top: 0;
}

figure {

    margin:0;
    padding:0;
}

img {
    max-width: 100%; /* Ensure that all the img cannot use more space than available space on its container  */
}
/*--------- ------------ ----------*/

/*--------- MAIN CONTENT ----------*/

#container {
    width: 1190px;
    margin: 0 auto;
    border: 2px solid #cfcfcf;
    display: flex;
    justify-content: space-between;
    
}



/*--------- ------------ ----------*/


/*--------- REUSABLES CLASSES ----------*/

.main-color {
    color: #29B6F6;
}

.styled-border {

    border-bottom: 2px solid #29B6F6;
    
}

.circle-border {

    display:inline-block;
    height: 3rem;
    width: 3rem;
    padding:8px;
    border:1px solid black;
    border-radius:50%;
}



.remove-bottom-margin {

    margin-bottom: 0;

}

.add-left-margin-12 {

    margin-left:12%;

}

.add-left-margin-10 {

    margin-left:10%;

}

.add-top-margin-10 {

    margin-top:10%;
}


/*--------- ----------------- ----------*/

/* ----------- HEADER ------------*/

#main-header {

    margin-top: 60px;
    margin-bottom: 60px;
}


#firstname {

    font-family: 'Helvetica Thin', Helvetica, Arial, sans-serif;
    font-size: 2.4rem;
}

#lastname {

    font-family: 'Helvetica Ultra Light', Helvetica, Arial, sans-serif;
    font-size: 2.4rem;
}

/*--------- ----------- ----------*/

/* ----------- CONTENT ------------*/
.main-content-titles {

    font-family: 'Helvetica Light', Helvetica, Arial, sans-serif;
    font-size: 1.2rem;
    padding-bottom: 10px;
    margin-bottom: 20px;

}

#trainings-first-row {

    display: flex; /* Define that div as flex container to position its flex (childs) elements */
    

}
#trainings-second-row {

    display: flex; /* Define that div as flex container to position its flex (childs) elements */
    

}

.trainings-date {
   
    flex: 20%; /* Define the min/max width (flex grow/shrink) of that flex element */
    display: flex; /* Make this flex element a flex container itself to position its flex (childs) elements */
    flex-direction: column; /* Make the city appear "under" the date */
    

}

.trainings-text {


    flex:80%; /* Define the min/max width (flex grow/shrink) of that flex element */
    
    

}


#experiences-first-row {

    display: flex; /* Define that div as flex container to position its flex (childs) elements */
    

}
#experiences-second-row {

    display: flex; /* Define that div as flex container to position its flex (childs) elements */
    

}

.experiences-date {
   
    flex: 20%; /* Define the min/max width (flex grow/shrink) of that flex element */
    display: flex; /* Make this flex element a flex container itself to position its flex (childs) elements */
    flex-direction: column; /* Make the city appear "under" the date */
    

}

.experiences-text {


    flex:80%; /* Define the min/max width (flex grow/shrink) of that flex element */
    
    

}

#recommandations-row {

    display: flex; /* Define that div as flex container to position its flex (childs) elements */
    justify-content: space-between; /* Ensure that there will always be a space between the flex elements */

}
.recommandations-first-text {

    max-width: 45%; /* Ensure that the maximum width of the flex (child) element will always be less than the half of container width to be able to see the space between flex elements */
}
/* ... */

